argo-manifests/namespace.yaml
# Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    env: dev
