argo-manifests/statefulset.yaml
# mysql statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: dev
spec:
  serviceName: "mysql"
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
          requests:
            memory: "512Mi"
            cpu: "500m"
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: pvc-demo
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
      volumeMode: Filesystem
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate 
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
  minReadySeconds: 30
